# practice_django

./: .env.example  .gitignore  Makefile  pyproject.toml  test_one.ipynb
.ipynb_checkpoints/: test_one-checkpoint.ipynb
blog/: admin.py  forms.py  models.py  urls.py
blog/migrations/: 0001_initial.py  0002_post_author.py  0003_post_content.py  0004_post_slug.py  0005_alter_post_title.py  0006_post_likes_post_reply.py  0007_alter_post_content.py  0008_alter_post_reply.py  0009_rename_data_created_post_date_created.py
blog/templates/blog/: base.html  detail.html  list.html  post_form.html
blog/views/: __init__.py  all_posts.py  create.py  detail.py  user_posts.py
discussions/: models.py  urls.py
discussions/forms/: __init__.py  forms.py
discussions/migrations/: 0001_initial.py
discussions/templates/discussions/: base.html  create_form.html  detail.html  list.html
discussions/views/: __init__.py  all_discussions.py  create_discussions.py  detail_discussions.py  user_discussions.py
forms_app/: urls.py
practice_django/: __init__.py  routing.py  settings.py  urls.py
templates/templates_projects/: base.html  form.html  home.html  navbar.html
users/: urls.py
users/templates/: base.html
users/templates/users/: form.html
users/views/: __init__.py  auth.py
wiki/GENERIC/generic/: mkdocs.yml
wiki/GENERIC/generic/docs/: README.txt  pip.md
wiki/GENERIC/generic/docs/blog/: dev_blog.md  templates.md
wiki/GENERIC/generic/docs/my_notes/: database.md  static.md
wiki/GENERIC/generic/wiki/GENERIC/generic/: 404.html  index.html
wiki/GENERIC/generic/wiki/GENERIC/generic/blog/models/: index.html
wiki/GENERIC/generic/wiki/GENERIC/generic/blog/templates/: index.html
wiki/GENERIC/generic/wiki/GENERIC/generic/dev/: index.html
wiki/GENERIC/generic/wiki/GENERIC/generic/pip/: index.html
wiki/GENERIC/generic/wiki/GENERIC/generic/search/: search_index.json
wiki/GENERIC/generic/wiki/GENERIC/generic/settings/: index.html
(+2 files in other folders)
